Sidebar component basic ui and fixing layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "Qurankarim114";
+  src: url("/src/assets/fonts/Qurankarim114.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
 .font-arabic {
   font-family: "Amiri", serif;
+}
+
+.font-quran-calligraphy {
+  font-family: "Qurankarim114", serif;
 }
 
 .font-english {
